# dnsjit

./: .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CHANGES  Makefile.am  README.md  autogen.sh  configure.ac  fmt.sh
contrib/: respdiff-dnsjit2answers.py
debian/: changelog  control  copyright  dirs  dnsjit-dev.install  dnsjit.install  rules
examples/: Makefile.am  capture.lua  count-pkts-per-ip.lua  dumpdns-qr.lua  dumpdns.lua  dumpdns2pcap.lua  filter_rcode.lua  pcap2tcpdns.lua  playqr.lua  qr-multi-pcap-state.lua  readme.lua  replay.lua  replay_multicli.lua  respdiff.lua  simulator.lua  test_pcap_read.lua  test_throughput.lua
examples/modules/: README.md
examples/modules/filter-example/: README.md  configure.ac  test.lua
examples/modules/filter-example/src/: Makefile.am
examples/modules/filter-example/src/filter/: counter.c  counter.lua
examples/modules/input-example/: Makefile.am  README.md  configure.ac  test.lua
examples/modules/input-example/src/: Makefile.am
examples/modules/input-example/src/input/: zero.c  zero.lua
examples/modules/lib-example/: Makefile.am  README.md  configure.ac  test.lua
examples/modules/lib-example/src/: Makefile.am
examples/modules/lib-example/src/lib/: duration.lua
examples/modules/output-example/: README.md  configure.ac  test.lua
examples/modules/output-example/src/: Makefile.am
examples/modules/output-example/src/output/: null.c  null.lua
examples/stand-alone-tool/: Makefile.am  README.md  configure.ac  dnsjit_modules.lua
examples/stand-alone-tool/src/: Makefile.am
examples/stand-alone-tool/src/test/: Makefile.am  test.sh
m4/: dl.sh
rpm/: dnsjit.spec
src/: Makefile.am  core.lua  dnsjit.1in  dnsjit.c  filter.lua  gen-compat.lua  gen-errno.sh  gen-makefile.sh  gen-manpage.lua  globals.c  globals.h  input.lua  lib.lua  output.lua  version.h
src/contrib/: trie.c  trie.h
src/core/: assert.h  channel.c  channel.h  channel.hh  channel.lua  chelpers.lua  compat.c  compat.h  compat.lua  file.c  file.h  file.hh  file.lua  loader.lua  log.c  log.h  log.hh  log.lua  mutex.c  mutex.h  mutex.hh  mutex.lua  object.c  object.h  object.hh  object.lua  objects.lua  producer.c  producer.h  producer.hh  producer.lua  query.c  query.h  query.hh  query.lua  receiver.c  receiver.h  receiver.hh  receiver.lua  thread.c  (+10 more)
src/core/object/: dns.c  dns.h  dns.hh  dns.lua  ether.c  ether.h  ether.hh  ether.lua  gre.c  gre.h  gre.hh  gre.lua  icmp.c  icmp.h  icmp.hh  icmp.lua  icmp6.c  icmp6.h  icmp6.hh  icmp6.lua  ieee802.c  ieee802.h  ieee802.hh  ieee802.lua  ip.c  ip.h  ip.hh  ip.lua  ip6.c  ip6.h  ip6.hh  ip6.lua  linuxsll.c  linuxsll.h  linuxsll.hh  linuxsll.lua  linuxsll2.c  linuxsll2.h  linuxsll2.hh  linuxsll2.lua  (+28 more)
src/core/object/dns/: label.lua  q.lua  rr.lua
src/filter/: copy.c  copy.h  copy.hh  copy.lua  coro.c  coro.h  coro.hh  coro.lua  dnssim.c  dnssim.h  dnssim.hh  dnssim.lua  ipsplit.c  ipsplit.h  ipsplit.hh  ipsplit.lua  layer.c  layer.h  layer.hh  layer.lua  lua.c  lua.h  lua.hh  lua.lua  multicopy.c  multicopy.h  multicopy.hh  multicopy.lua  roundrobin.c  roundrobin.h  roundrobin.hh  roundrobin.lua  split.c  split.h  split.hh  split.lua  thread.c  thread.h  thread.hh  thread.lua  (+4 more)
src/input/: fpcap.c  fpcap.h  fpcap.hh  fpcap.lua  lua.lua  mmpcap.c  mmpcap.h  mmpcap.hh  mmpcap.lua  pcap.c  pcap.h  pcap.hh  pcap.lua  pcapthread.c  pcapthread.h  pcapthread.hh  pcapthread.lua  zero.c  zero.h  zero.hh  zero.lua  zmmpcap.c  zmmpcap.h  zmmpcap.hh  zmmpcap.lua  zpcap.c  zpcap.h  zpcap.hh  zpcap.lua
src/lib/: base64url.c  base64url.h  base64url.hh  base64url.lua  clock.c  clock.h  clock.hh  clock.lua  getopt.lua  ip.lua  parseconf.lua  trie.c  trie.h  trie.hh  trie.lua
src/lib/trie/: iter.lua  node.lua
src/output/: client_pool.c  client_pool.h  client_pool.hh  client_pool.lua  cpool.c  cpool.h  cpool.hh  cpool.lua  dnscli.c  dnscli.h  dnscli.hh  dnscli.lua  dnssim.c  dnssim.h  dnssim.hh  dnssim.lua  dnssim_internal.h  null.c  null.h  null.hh  null.lua  pcap.c  pcap.h  pcap.hh  pcap.lua  respdiff.c  respdiff.h  respdiff.hh  respdiff.lua  tcpcli.c  tcpcli.h  tcpcli.hh  tcpcli.lua  tlscli.c  tlscli.h  tlscli.hh  tlscli.lua  udpcli.c  udpcli.h  udpcli.hh  (+1 more)
src/output/client_pool/: client.c  client.h  client_pool.c  client_pool.h
src/output/cpool/: client.c  client.h  client_pool.c  client_pool.h
src/output/dnssim/: CHANGELOG.md  common.c  connection.c  https2.c  internal.h  ll.h  tcp.c  tls.c  udp.c
src/test/: 46vs45.pcap  Makefile.am  dns.pcap.zst  ip6-tcp-padd.pcap  ip6-udp-padd.pcap  pellets.pcap  tcp-response-with-trailing-junk.pcap  test-base64url.sh  test-ipsplit.sh  test-padding.sh  test-sll2.gold  test-sll2.sh  test-trie.sh  test1.gold  test1.sh  test2.gold  test2.sh  test3.gold  test3.sh  test4.gold  test4.sh  test5.sh  test6.sh  test_base64url.lua  test_compressupport.lua  test_ipsplit.lua  test_padding.gold  test_padding.lua  test_trie.lua
